--- a/Code/Auto_MPG_SAS.ipynb
+++ b/Code/Auto_MPG_SAS.ipynb
@@ -10012,10 +10012,10 @@
     "*Three different methods have been used here to detect the outliers;\n",
     "\n",
     "*Method 1: Print outlier values 3 Standard Deviation away from the mean;\n",
-    "*Triming 0.5% values from the top and bottom of the data;\n",
+    "*Triming 5% values from the top and bottom of the data;\n",
     "\n",
     "ods output TrimmedMeans=auto.trimmed (keep= Varname mean stdmean df);\n",
-    "    proc univariate data = auto.updated noprint trim=0.05 nextrobs=10;\n",
+    "proc univariate data = auto.updated trim=0.05 nextrobs=10;\n",
     "run;\n",
     "ods output close;\n",
     "\n",
